--- a/.github/workflows/thingy.yaml
+++ b/.github/workflows/thingy.yaml
@@ -27,6 +27,6 @@ jobs:
                     ignore/*
                     ignore/**/*
                 # (WARNING: Advanced Configuration) Boolean indicating whether to only convert CSV files which have a companion JSON configuration file into CSV-Ws.
-                config-required: true
+                config-required: false
                 # (WARNING: Advanced Configuration) Boolean indicating whether to output debug statements in order to help diagnose a fault or unexpected behaviour.
                 debug: false
